Reetan.Nayak Dev 25/force-app/main/default/objects/Coordinator__c/Coordinator__c.object-meta.xml
<CustomObject>
    <label>Coordinator</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coordinator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>