Reetan.Nayak Dev 25/force-app/main/default/objects/Coordinator__c/fields/Language_Known__c.field-meta.xml
<CustomField>
    <fullName>Language_Known__c</fullName>
    <label>Language Known</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>