Reetan.Nayak Dev 25/force-app/main/default/objects/Coordinator__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <label>PIN</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>